apps/base/mealie/deployment-mealie.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie
  namespace: mealie
spec:
  replicas: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mealie
      component: web
  template:
    metadata:
      labels:
        app: mealie
        component: web
    spec:
      containers:
        - name: mealie
          image: ghcr.io/mealie-recipes/mealie:v3.9.2
          ports:
            - name: http
              containerPort: 9000
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /app/data
          resources:
            requests:
              cpu: 250m
              memory: 400Mi
            limits:
              cpu: 1000m
              memory: 1500Mi
          livenessProbe:
            httpGet:
              path: /api/app/about
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /api/app/about
              port: http
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: mealie-app-data
