apps/base/mealie/service-mealie.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie
  namespace: mealie
spec:
  type: ClusterIP
  selector:
    app: mealie
    component: web
  ports:
    - name: http
      port: 9000
      targetPort: http
      protocol: TCP
