apps/base/mealie/service-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie-postgres
  namespace: mealie
spec:
  type: ClusterIP
  selector:
    app: mealie
    component: postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
      protocol: TCP
